--- a/deploy_tools/nginx.template.conf
+++ b/deploy_tools/nginx.template.conf
@@ -1,10 +1,12 @@
 server {
     listen 80;
     server_name SITENAME www.SITENAME;
+    access_log /data/www/SITENAME/logs/access.log;
+    error_log /data/www/SITENAME/logs/error.log;
 
     location / {
-        proxy_set_header Host $host;
         proxy_pass http://unix:/tmp/SITENAME.socket;
+        proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
