--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.10.3
+Django==1.10.5
 Pillow==3.4.2
 django-taggit==0.21.3
 djangorestframework==3.4.7
@@ -6,3 +6,4 @@ gunicorn==19.6.0
 markdown2==2.3.1
 mysqlclient==1.3.9
 pytz==2016.7
+Pygments==2.2.0
