--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ django-cors-headers==2.4.0
 django-filter==2.0.0
 djangorestframework==3.9.0
 gunicorn==19.9.0
+markdown2==2.3.6
 mysqlclient==1.3.13
 Pillow==5.3.0
+Pygments==2.3.0
 pytz==2018.7
+requests==2.20.1
